[package]
name = "dice_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rand = "0.9.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
toml = "0.9.2"
winnow = "0.7.12"
